--- a/sample.fxml
+++ b/sample.fxml
@@ -13,28 +13,28 @@
    <children>
       <Pane prefHeight="398.0" prefWidth="507.0">
          <children>
-            <Button fx:id="btn0" layoutX="23.0" layoutY="25.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="60.0" text="X" />
-            <Button fx:id="btn1" layoutX="88.0" layoutY="25.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="60.0" text="X" />
-            <Button fx:id="btn2" layoutX="155.0" layoutY="25.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="60.0" text="X" />
-            <Button fx:id="btn3" layoutX="220.0" layoutY="25.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="60.0" text="X" />
+            <Button fx:id="btn0" layoutX="23.0" layoutY="25.0" mnemonicParsing="false" onAction="#clickBtn0" prefHeight="60.0" prefWidth="60.0" text="X" />
+            <Button fx:id="btn1" layoutX="88.0" layoutY="25.0" mnemonicParsing="false" onAction="#clickBtn0" prefHeight="60.0" prefWidth="60.0" text="X" />
+            <Button fx:id="btn2" layoutX="155.0" layoutY="25.0" mnemonicParsing="false" onAction="#clickBtn0" prefHeight="60.0" prefWidth="60.0" text="X" />
+            <Button fx:id="btn3" layoutX="220.0" layoutY="25.0" mnemonicParsing="false" onAction="#clickBtn0" prefHeight="60.0" prefWidth="60.0" text="X" />
 
-             <Button fx:id="btn4" layoutX="23.0" layoutY="95.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="60.0" text="X" />
-             <Button fx:id="btn5" layoutX="88.0" layoutY="95.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="60.0" text="X" />
-             <Button fx:id="btn6" layoutX="155.0" layoutY="95.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="60.0" text="X" />
-             <Button fx:id="btn7" layoutX="220.0" layoutY="95.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="60.0" text="X" />
+             <Button fx:id="btn4" layoutX="23.0" layoutY="95.0" mnemonicParsing="false" onAction="#clickBtn0" prefHeight="60.0" prefWidth="60.0" text="X" />
+             <Button fx:id="btn5" layoutX="88.0" layoutY="95.0" mnemonicParsing="false" onAction="#clickBtn0" prefHeight="60.0" prefWidth="60.0" text="X" />
+             <Button fx:id="btn6" layoutX="155.0" layoutY="95.0" mnemonicParsing="false" onAction="#clickBtn0" prefHeight="60.0" prefWidth="60.0" text="X" />
+             <Button fx:id="btn7" layoutX="220.0" layoutY="95.0" mnemonicParsing="false" onAction="#clickBtn0" prefHeight="60.0" prefWidth="60.0" text="X" />
 
-             <Button fx:id="btn8" layoutX="23.0" layoutY="165.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="60.0" text="X" />
-             <Button fx:id="btn9" layoutX="88.0" layoutY="165.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="60.0" text="X" />
-             <Button fx:id="btn10" layoutX="155.0" layoutY="165.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="60.0" text="X" />
-             <Button fx:id="btn11" layoutX="220.0" layoutY="165.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="60.0" text="X" />
+             <Button fx:id="btn8" layoutX="23.0" layoutY="165.0" mnemonicParsing="false" onAction="#clickBtn0" prefHeight="60.0" prefWidth="60.0" text="X" />
+             <Button fx:id="btn9" layoutX="88.0" layoutY="165.0" mnemonicParsing="false" onAction="#clickBtn0" prefHeight="60.0" prefWidth="60.0" text="X" />
+             <Button fx:id="btn10" layoutX="155.0" layoutY="165.0" mnemonicParsing="false" onAction="#clickBtn0" prefHeight="60.0" prefWidth="60.0" text="X" />
+             <Button fx:id="btn11" layoutX="220.0" layoutY="165.0" mnemonicParsing="false" onAction="#clickBtn0" prefHeight="60.0" prefWidth="60.0" text="X" />
 
-             <Button fx:id="btn12" layoutX="23.0" layoutY="235.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="60.0" text="X" />
-             <Button fx:id="btn13" layoutX="88.0" layoutY="235.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="60.0" text="X" />
-             <Button fx:id="btn14" layoutX="155.0" layoutY="235.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="60.0" text="X" />
-             <Button fx:id="btn15" layoutX="220.0" layoutY="235.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="60.0" text="X" />
-            <Button layoutX="376.0" layoutY="35.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="80.0" text="New Game" />
-            <Button layoutX="376.0" layoutY="105.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="80.0" text="End Game" />
-            <Button layoutX="376.0" layoutY="175.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="80.0" text="Restart Game" />
+             <Button fx:id="btn12" layoutX="23.0" layoutY="235.0" mnemonicParsing="false" onAction="#clickBtn0" prefHeight="60.0" prefWidth="60.0" text="X" />
+             <Button fx:id="btn13" layoutX="88.0" layoutY="235.0" mnemonicParsing="false" onAction="#clickBtn0" prefHeight="60.0" prefWidth="60.0" text="X" />
+             <Button fx:id="btn14" layoutX="155.0" layoutY="235.0" mnemonicParsing="false" onAction="#clickBtn0" prefHeight="60.0" prefWidth="60.0" text="X" />
+             <Button fx:id="btn15" layoutX="220.0" layoutY="235.0" mnemonicParsing="false" onAction="#clickBtn0" prefHeight="60.0" prefWidth="60.0" text="X" />
+            <Button fx:id="btnnewgame" layoutX="376.0" layoutY="35.0" mnemonicParsing="false" onAction="#clickNewGame" prefHeight="60.0" prefWidth="80.0" text="New Game" />
+            <Button fx:id="btnendgame" layoutX="376.0" layoutY="181.0" mnemonicParsing="false" onAction="#clickEndGame" prefHeight="60.0" prefWidth="80.0" text="End Game" />
+            <Button fx:id="btnrestartgame" disable="true" layoutX="376.0" layoutY="105.0" mnemonicParsing="false" onAction="#clickRestartGame" prefHeight="60.0" prefWidth="80.0" text="Restart Game" />
          </children>
       </Pane>
    </children>
